--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "symfony/twig-bundle": "^6.4|^7.0",
         "symfony/validator": "^6.4|^7.0",
         "symfony/var-dumper": "^6.4|^7.0",
+        "symfony/yaml": "^6.4|^7.0",
         "twig/twig": "^3.6",
         "zenstruck/assert": "^1.2",
         "zenstruck/console-test": "^1.4",
